# Jira-supervisor-agent

./: .env  .gitignore  README.md  desktop.ini  langgraph.json  pyproject.toml
.github/workflows/: ci.yml
app/agents/: fetch.py  summarize.py  supervisor.py
app/agents/common/: llm.py  state.py
app/common/: llm.py
app/tools/: email.py
